# Backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agent/: AGENT.md
.agent/knowledge/: prd.md
.agent/skills/fast-api-skill/assets/: template.py
.agent/skills/postgreSQL-skill/: SKILL.md
.agent/skills/postgreSQL-skill/references/: conn-pooling.md  query-missing-indexes.md  schema-data-integrity.md  security-rls-performance.md
.agent/task/: 00-overview.md  phase-00-bootstrap.md  phase-01-db-schema.md  phase-02-auth.md  phase-03-giver-taker-write.md  phase-04-discover.md  phase-05-ai-tags.md  phase-06-match-flow.md  phase-07-integration-demo.md  phase-08-community.md
.agent/task/.claude/: settings.local.json
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_community.py
app/: main.py
app/auth/: dev.py
app/core/: config.py
app/db/: session.py
app/models/db/: __init__.py  community.py  giver.py  match.py  post.py  tag.py  user.py
app/models/schemas/: ai.py  community.py  discover.py  giver.py  match.py  post.py  tag.py  user.py
app/routers/: ai.py  auth.py  community.py  discover.py  givers.py  matches.py  posts.py
app/services/: ai_service.py  community_service.py  discover_service.py  giver_service.py  match_service.py  post_service.py  pricing.py
scripts/: seed.py
tests/: conftest.py  test_discover.py  test_match_flow.py  test_pricing.py
