[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "giverun-backend"
version = "0.1.0"
description = "GIVE:RUN backend (FastAPI + SQLAlchemy async + PostgreSQL + Gemini)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "google-generativeai>=0.8",
    "alembic>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
